--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="alison/index.html">INICIO</a></li>
-                <li><a href="alison/reserva ya.html">RESERVA YA!</a></li>
-                <li><a href="alison/acerca de nosotros.html">ACERCA DE NOSOTROS</a></li>
-                <li><a href="alison/contratos.html">CONTRATOS</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="reserva ya.html">RESERVA YA!</a></li>
+                <li><a href="acerca de nosotros.html">ACERCA DE NOSOTROS</a></li>
+                <li><a href="contratos.html">CONTRATOS</a></li>
             </ul>
         </nav>
         <div class="social-icons">
