--- a/contratos.html
+++ b/contratos.html
@@ -16,10 +16,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="../proyecto flecha bus/index.html">INICIO</a></li>
-                <li><a href="../proyecto flecha bus/reserva ya.html">RESERVA YA!</a></li>
-                <li><a href="../proyecto flecha bus/acerca de nosotros.html">ACERCA DE NOSOTROS</a></li>
-                <li><a href="../proyecto flecha bus/contratos.html">CONTRATOS</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="reserva ya.html">RESERVA YA!</a></li>
+                <li><a href="acerca de nosotros.html">ACERCA DE NOSOTROS</a></li>
+                <li><a href="contratos.html">CONTRATOS</a></li>
             </ul>
         </nav>
         <div class="social-icons">
