--- a/acerca de nosotros.html
+++ b/acerca de nosotros.html
@@ -118,7 +118,7 @@
 
 
 
-     <!-- Sección de servicios con un diseño moderno y estético -->
+     
      <section id="servici" class="servici">
         <div class="servicio-cards">
             <div class="servicio-card">
@@ -142,7 +142,7 @@
                     <i class="fas fa-route servicio-icon"></i>
                     <h3>Rutas Turísticas</h3>
                     <p>Disfruta de nuestras rutas turísticas exclusivas que te permitirán explorar los paisajes más impresionantes de Bolivia.</p>
-                    <a href="../proyecto flecha bus/contratos.html" class="btn">MAS INFORMACIÓN</a>
+                    <a href="contratos.html" class="btn">MAS INFORMACIÓN</a>
                 </div>
             </div>
         </div>
@@ -242,10 +242,10 @@
             <div class="footer-section">
                 <h3>Enlaces Útiles</h3>
                 <ul>
-                    <li><a href="../proyecto flecha bus/index.html">Inicio</a></li>
-                    <li><a href="../proyecto flecha bus/reserva ya.html">Reserva ya!</a></li>
-                    <li><a href="../proyecto flecha bus/acerca de nosotros.html">Acerca de nosotros</a></li>
-                    <li><a href="../proyecto flecha bus/contratos.html">Contratos</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="reserva ya.html">Reserva ya!</a></li>
+                    <li><a href="acerca de nosotros.html">Acerca de nosotros</a></li>
+                    <li><a href="contratos.html">Contratos</a></li>
                 </ul>
             </div>
             <div class="footer-section">
