--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <p>
                 ¡No pierdas la oportunidad de descubrir uno de los destinos más asombrosos de Bolivia! 
             </p>
-            <a href="../proyecto flecha bus/reserva ya.html" class="explore-button">Reserva ya!</a>
+            <a href="reserva ya.html" class="explore-button">Reserva ya!</a>
         </div>
     </section>
     
@@ -167,7 +167,7 @@
             <p>
                 ¡No te preocupes! Ofrecemos diversas rutas que te llevarán a los lugares más impresionantes. Explora paisajes únicos y vive experiencias inolvidables.
             </p>
-            <a href="../proyecto flecha bus/acerca de nosotros.html" class="explore-button">Descubre Nuestras Rutas</a>
+            <a href="acerca de nosotros.html" class="explore-button">Descubre Nuestras Rutas</a>
         </div>
     </section>
     
@@ -193,10 +193,10 @@
             <div class="footer-section">
                 <h3>Enlaces Útiles</h3>
                 <ul>
-                    <li><a href="../proyecto flecha bus/index.html">Inicio</a></li>
-                    <li><a href="../proyecto flecha bus/reserva ya.html">Reserva ya!</a></li>
-                    <li><a href="../proyecto flecha bus/acerca de nosotros.html">Acerca de nosotros</a></li>
-                    <li><a href="../proyecto flecha bus/contratos.html">Contratos</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="reserva ya.html">Reserva ya!</a></li>
+                    <li><a href="acerca de nosotros.html">Acerca de nosotros</a></li>
+                    <li><a href="contratos.html">Contratos</a></li>
                 </ul>
             </div>
             <div class="footer-section">
