--- a/reserva ya.html
+++ b/reserva ya.html
@@ -78,10 +78,10 @@
             <div class="footer-section">
                 <h3>Enlaces </h3>
                 <ul>
-                    <li><a href="../proyecto flecha bus/index.html">Inicio</a></li>
-                    <li><a href="../proyecto flecha bus/reserva ya.html">Reserva ya!</a></li>
-                    <li><a href="../proyecto flecha bus/acerca de nosotros.html">Acerca de nosotros</a></li>
-                    <li><a href="../proyecto flecha bus/contratos.html">Contratos</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="reserva ya.html">Reserva ya!</a></li>
+                    <li><a href="acerca de nosotros.html">Acerca de nosotros</a></li>
+                    <li><a href="contratos.html">Contratos</a></li>
                 </ul>
             </div>
             <div class="footer-section">
